a new commit to start a new test for the website.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello Worldls
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+    <p>this is just a pave that checks to see how the site looks.</p>
+
+    
+</body>
+</html>>
