--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <p>this is just a pave that checks to see how the site looks.</p>
+    <p>this is just a my page that checks to see how the site looks.</p>
 
 
 </body>
