--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <p>this is just a my page that checks to see how the site looks.</p>
 
-
+    <p> a new commit for a new day</p>
 </body>
 </html>
